2006-05-11  Simon J. Gerraty  <sjg@void.crufty.net>

	* Makefile.in (BMAKE_VERSION):  bump to 20060511
	* Merge with NetBSD make, pick up:
	  o more memory leaks - coverity
	  o possible overflow in ArchFindMember - coverity
	  o extract variable modifier code out of Var_Parse()
	    so it can be called recursively - sjg
	  o unit-tests/moderrs - sjg

2006-04-12  Simon J. Gerraty  <sjg@void.crufty.net>

	* Makefile.in (BMAKE_VERSION): bump to 20060412
	* Merge with NetBSD make, pick up:
	  o fixes for some memory leaks - coverity
	  o only read first sys.mk etc when searching sysIncPath - sjg

	* main.c (ReadMakefile): remove hack for __INTERIX that prevented
	setting ${MAKEFILE} - OBATA Akio

2006-03-18  Simon J. Gerraty  <sjg@void.crufty.net>

	* Makefile.in (BMAKE_VERSION): bump to 20060318
	* Merge with NetBSD make, pick up:
	  o cleanup of job.c to remove remote handling, distcc is more
	    useful and this code was likely bit-rotting - dsl
	  o fix for :P modifier - sjg
	* boot-strap: set default prefix to something reasonable 
	  (for me anyway). 

2006-03-01  Simon J. Gerraty  <sjg@void.crufty.net>

	* Makefile.in (BMAKE_VERSION): bump to 20060301
	* Merge with NetBSD make, pick up:
	  o make .WAIT apply recursively, document and test case - abp
	  o allow variable modifiers in a variable appear anywhere in
	    modifier list, document and test case - sjg

2006-02-22  Simon J. Gerraty  <sjg@void.crufty.net>

	* Makefile.in (BMAKE_VERSION): bump to 20060222
	* Merge with NetBSD make, pick up:
	  o improved job token handling - dsl
	  o SIG_DFL the correct signal before exec - dsl
	  o more debug info during parsing - dsl
	  o allow variable modifiers to be specified via variable - sjg
	* boot-strap: explain why we died if no mksrc

2005-11-05  Simon J. Gerraty  <sjg@void.crufty.net>

	* Makefile.in (BMAKE_VERSION): bump to 20051105
	* configure.in: always set default_sys_path 
	  default is ${prefix}/share/mk