@@ -1,4 +1,4 @@
-/*	$NetBSD: main.c,v 1.125 2006/04/22 18:48:46 christos Exp $	*/
+/*	$NetBSD: main.c,v 1.128 2006/07/28 17:06:14 sjg Exp $	*/
 
 /*
  * Copyright (c) 1988, 1989, 1990, 1993
@@ -69,7 +69,7 @@
  */
 
 #ifndef MAKE_NATIVE
-static char rcsid[] = "$NetBSD: main.c,v 1.125 2006/04/22 18:48:46 christos Exp $";
+static char rcsid[] = "$NetBSD: main.c,v 1.128 2006/07/28 17:06:14 sjg Exp $";
 #else
 #include <sys/cdefs.h>
 #ifndef lint
@@ -81,7 +81,7 @@ __COPYRIGHT("@(#) Copyright (c) 1988, 1989, 1990, 1993\n\
 #if 0
 static char sccsid[] = "@(#)main.c	8.3 (Berkeley) 3/19/94";
 #else
-__RCSID("$NetBSD: main.c,v 1.125 2006/04/22 18:48:46 christos Exp $");
+__RCSID("$NetBSD: main.c,v 1.128 2006/07/28 17:06:14 sjg Exp $");
 #endif
 #endif /* not lint */
 #endif
@@ -1167,7 +1167,9 @@ ReadMakefile(ClientData p, ClientData q __unused)
 		if (!name)
 			name = Dir_FindFile(fname,
 				Lst_IsEmpty(sysIncPath) ? defIncPath : sysIncPath);
-		if (!name || !(stream = fopen(name, "r"))) {
+		if (!name || (stream = fopen(name, "r")) == NULL) {
+			if (name)
+				free(name);
 			free(path);
 			return(-1);
 		}
@@ -1270,7 +1272,7 @@ Check_Cwd_av(int ac, char **av, int copy)
 
 	n = strlen(av[i]);
 	cp = &(av[i])[n - 1];
-	if (strspn(av[i], "|&;") == n) {
+	if (strspn(av[i], "|&;") == (size_t)n) {
 	    next_cmd = 1;
 	    continue;
 	} else if (*cp == ';' || *cp == '&' || *cp == '|' || *cp == ')') {
@@ -1777,16 +1779,20 @@ void
 PrintOnError(const char *s)
 {
     char tmp[64];
-	
+    char *cp;
+
     if (s)
 	    printf("%s", s);
 	
     printf("\n%s: stopped in %s\n", progname, curdir);
     strncpy(tmp, "${MAKE_PRINT_VAR_ON_ERROR:@v@$v='${$v}'\n@}",
 	    sizeof(tmp) - 1);
-    s = Var_Subst(NULL, tmp, VAR_GLOBAL, 0);
-    if (s && *s)
-	printf("%s", s);
+    cp = Var_Subst(NULL, tmp, VAR_GLOBAL, 0);
+    if (cp) {
+	    if (*cp)
+		    printf("%s", cp);
+	    free(cp);
+    }
 }
 
 void
